<resources>
    <string name="app_name">NetStore</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="email">Почта</string>
    <string name="birthday">Дата рождения</string>
    <string name="phone">Телефон</string>
    <string name="password_repeat">Повторение пароля</string>
    <string name="add">Добавить</string>
    <string name="count">Количество</string>
    <string name="price">Цена</string>
    <string name="description">Описание</string>
    <string name="name">Название</string>
    <string name="type">Тип</string>
    <string name="save">Сохранить</string>
    <string name="hire_date">Дата приема</string>
    <string name="job">Должность</string>
    <string name="department">Отдел</string>
    <string name="salary">Зарплата</string>
    <string name="address">Адрес</string>
    <string name="account">Аккаунт</string>
    <string name="places">Места</string>
    <string name="product">Товар</string>
    <string name="products">Товары</string>
    <string name="users">Пользователи</string>
    <string name="orders">Заказы</string>
    <string name="inventory">Инвентаризация</string>
    <string name="exit">Выход</string>
    <string name="receive">Поступление</string>
    <string name="send">Отправка</string>
    <string name="move">Перемещение</string>
    <string name="clients">Клиенты</string>
    <string name="employees">Работники</string>
    <string name="shopping_cart">Корзина</string>
    <string name="place">Место</string>
    <string name="place_begin">Место начала</string>
    <string name="place_end">Место назначения</string>
    <string name="checkout">Оформить</string>
    <string name="delivery_date">Дата доставки</string>
    <string name="status">Статус</string>
    <string name="total_payable">Сумма</string>
</resources>