<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/account_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/account" />

    <Button
        android:id="@+id/places_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/places" />

    <Button
        android:id="@+id/products_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/product" />

    <Button
        android:id="@+id/users_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/users" />

    <Button
        android:id="@+id/orders_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/orders" />

    <Button
        android:id="@+id/inventory_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/inventory" />

    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>
