<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!-- Кнопка "Поступление" -->
    <Button
        android:id="@+id/receive_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/receive" />

    <!-- Кнопка "Отправка" -->
    <Button
        android:id="@+id/send_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <!-- Кнопка "Перемещение" -->
    <Button
        android:id="@+id/move_btn"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/move" />

</LinearLayout>

