<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Поле "Email" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <!-- Поле "Name" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <!-- Поле "Surname" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <!-- Поле "Birthday" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <!-- Поле "Hire Date" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hire_date"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_hire_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <!-- Поле "Job" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text=""/>

        <!-- Поле "Department" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <!-- Поле "Salary" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_view_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="40dp"/>

</RelativeLayout>

